--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -7,9 +7,9 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a [routerLink]="['/events']">All Events</a>
+                    <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" [routerLink]="['/events']">All Events</a>
                 </li>
-                <li><a href="" [routerLink]="['/events/new']">Create Event</a></li>
+                <li><a routerLinkActive="active" href="" [routerLink]="['/events/new']">Create Event</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Events <span class="caret"></span> </a>
                     <ul class="dropdown-menu">
@@ -33,5 +33,4 @@
                 <button class="btn btn-default"> Search </button>
             </form>
         </div>
-    </div>
-</div>
+    </div></div>
