--- a/app/user/profile.component.html
+++ b/app/user/profile.component.html
@@ -3,12 +3,14 @@
   <hr>
   <div class="col-md-4">
     <form [formGroup]="profileForm" autocomplete="off" novalidate (ngSubmit)="saveProfile(profileForm.value)">
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{'error': !validateFirstName()}">
         <label for="firstName">First Name:</label>
+        <em *ngIf="!validateFirstName()">Required</em>
         <input id="firstName" formControlName="firstName" type="text" class="form-control" placeholder="First Name..." />
       </div>
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{'error': !validateLastName()}">
         <label for="lastName">Last Name:</label>
+        <em *ngIf="!validateLastName()">Required</em>
         <input id="lastName" formControlName="lastName" type="text" class="form-control" placeholder="Last Name..." />
       </div>
 
