dive deeper into template-based forms

--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -34,4 +34,5 @@
                 <button class="btn btn-default"> Search </button>
             </form>
         </div>
-    </div></div>
+    </div>
+</div>
